--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
     <<: *default_container
     steps:
       - restore_packages
-      - run: npm audit
+      - run: npm audit fix
 workflows:
   my_workflow:
     jobs:
